Added a few more languages

--- a/goodbye.html
+++ b/goodbye.html
@@ -10,6 +10,9 @@
   <ul>
     <li>English: Goodbye, friends!</li>
     <li>Spanish: Adios, amigos!</li>
+    <li>Dutch: Dag vrienden!</li>
+    <li>Filipino: Paalam mga kaibigan!</li>
+    <li>Hatian Creole: Goodbye, zanmi!</li>
 </ul>
 </body>
 </html>
