Corrected DOCTYPE tag and indentation.

--- a/goodbye.html
+++ b/goodbye.html
@@ -1,18 +1,18 @@
-<DOCTYPE! HTML>
+<!DOCTYPE html>
 <html>
-<head>
-<style>
-</style>
-</head>
-<body>
-  <h1>Goodbye</h1>
-  <h2>A program to bid our friends farewell all over the world.</h2>
-  <ul>
-    <li>English: Goodbye, friends!</li>
-    <li>Spanish: Adios, amigos!</li>
-    <li>Dutch: Dag vrienden!</li>
-    <li>Filipino: Paalam mga kaibigan!</li>
-    <li>Hatian Creole: Goodbye, zanmi!</li>
-</ul>
-</body>
+  <head>
+    <style>
+    </style>
+  </head>
+  <body>
+    <h1>Goodbye</h1>
+    <h2>A program to bid our friends farewell all over the world.</h2>
+    <ul>
+      <li>English: Goodbye, friends!</li>
+      <li>Spanish: Adios, amigos!</li>
+      <li>Dutch: Dag vrienden!</li>
+      <li>Filipino: Paalam mga kaibigan!</li>
+      <li>Hatian Creole: Goodbye, zanmi!</li>
+    </ul>
+  </body>
 </html>
